chore: switch compose to image-based online updates

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,9 @@ NOTIFY_CHAT_ID=-1001234567890
 MONITOR_INTERVAL_SECONDS=60
 STANDBY_REFRESH_SECONDS=120
 RECOVERY_MAX_RETRY=3
+
+# 镜像地址：建议使用你自己的镜像仓库地址
+APP_IMAGE=ghcr.io/your-org/telegram-auto-clone:latest
+
+# watchtower 自动更新检查间隔（秒）
+WATCHTOWER_INTERVAL=300
