--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
-﻿version: '3.9'
 services:
   app:
-    build: .
+    image: ${APP_IMAGE:-ghcr.io/your-org/telegram-auto-clone:latest}
+    pull_policy: always
+    container_name: telegram-auto-clone
     ports:
       - "8000:8000"
     env_file:
@@ -9,4 +10,16 @@ services:
     volumes:
       - ./data:/app/data
       - ./sessions:/app/sessions
+    labels:
+      - "com.centurylinklabs.watchtower.enable=true"
     restart: unless-stopped
+
+  watchtower:
+    image: containrrr/watchtower:latest
+    container_name: telegram-auto-clone-watchtower
+    command: --label-enable --cleanup --interval ${WATCHTOWER_INTERVAL:-300}
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    restart: unless-stopped
+    profiles:
+      - autoupdate
