ci: add ghcr image workflow and align image naming

--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,8 @@ MONITOR_INTERVAL_SECONDS=60
 STANDBY_REFRESH_SECONDS=120
 RECOVERY_MAX_RETRY=3
 
-# 镜像地址：建议使用你自己的镜像仓库地址
-APP_IMAGE=ghcr.io/your-org/telegram-auto-clone:latest
+# 镜像地址：默认指向当前仓库 GHCR 包
+APP_IMAGE=ghcr.io/moeacgx/telegramautoclone:latest
 
 # watchtower 自动更新检查间隔（秒）
 WATCHTOWER_INTERVAL=300
