修复登录流程并完善部署配置

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ APP_IMAGE=ghcr.io/moeacgx/telegramautoclone:latest
 
 # watchtower 自动更新检查间隔（秒）
 WATCHTOWER_INTERVAL=300
+
+# 本地 profile 端口（app-local）
+LOCAL_APP_PORT=8001
