--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,21 @@ services:
       - "com.centurylinklabs.watchtower.enable=true"
     restart: unless-stopped
 
+  app-local:
+    build: .
+    image: telegramautoclone:local
+    container_name: telegram-auto-clone-local
+    ports:
+      - "${LOCAL_APP_PORT:-8001}:8000"
+    env_file:
+      - .env
+    volumes:
+      - ./data:/app/data
+      - ./sessions:/app/sessions
+    restart: unless-stopped
+    profiles:
+      - local
+
   watchtower:
     image: containrrr/watchtower:latest
     container_name: telegram-auto-clone-watchtower
