新增更新中心与手动确认更新机制，修复失效通知重复推送

--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,16 @@ RECOVERY_MAX_RETRY=3
 # 镜像地址：默认指向当前仓库 GHCR 包
 APP_IMAGE=ghcr.io/moeacgx/telegramautoclone:latest
 
-# watchtower 自动更新检查间隔（秒）
-WATCHTOWER_INTERVAL=300
+# watchtower HTTP API token（用于面板“确认并更新”触发）
+WATCHTOWER_HTTP_TOKEN=change-this-token
+# 面板内 watchtower API 地址（容器内默认可用）
+WATCHTOWER_URL=http://watchtower:8080
+
+
+# 更新检查与通知
+UPDATE_CHECK_INTERVAL_SECONDS=600
+UPDATE_HTTP_TIMEOUT_SECONDS=8
+UPDATE_NOTIFY_ENABLED=true
 
 # 本地 profile 端口（app-local）
 LOCAL_APP_PORT=8001
