✨ 重构后台UI并新增页面密码验证，修复watchtower编排与绑定列表隐藏

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-﻿API_ID=123456
+API_ID=123456
 API_HASH=your_api_hash
 BOT_TOKEN=123456:bot_token
 DATABASE_PATH=/app/data/telegram_auto_clone.db
@@ -7,6 +7,11 @@ NOTIFY_CHAT_ID=-1001234567890
 MONITOR_INTERVAL_SECONDS=60
 STANDBY_REFRESH_SECONDS=120
 RECOVERY_MAX_RETRY=3
+
+# 后台访问密码（必填，未配置将拒绝启动）
+PANEL_PASSWORD=change-this-password
+# 后台会话有效期（秒），默认 24 小时
+PANEL_SESSION_TTL_SECONDS=86400
 
 # 镜像地址：默认指向当前仓库 GHCR 包
 APP_IMAGE=ghcr.io/moeacgx/telegramautoclone:latest
@@ -24,3 +29,6 @@ UPDATE_NOTIFY_ENABLED=true
 
 # 本地 profile 端口（app-local）
 LOCAL_APP_PORT=8001
+
+# 面板密码
+PANEL_PASSWORD=200628
